<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".screens.PlayerInfo">

    <include
        android:id="@+id/toolBar"
        layout="@layout/tb"/>

    <ProgressBar
        android:indeterminateTint="@color/app_green"
        android:id="@+id/prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    
    <LinearLayout
        android:padding="15dp"
        android:layout_below="@id/toolBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/img"
            android:contentDescription="@string/app_name"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <TextView
            android:layout_marginTop="12dp"
            android:textColor="@color/app_green"
            android:text="@string/cl_na"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:background="@drawable/info_bg"
            android:layout_marginTop="12dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/founded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:visibility="gone"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/ph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/em"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/col"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="12dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:id="@+id/d1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:id="@+id/d2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:id="@+id/d3"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:autoLink="phone"
                    android:id="@+id/d4"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:autoLink="web"
                    android:id="@+id/d5"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:autoLink="email"
                    android:id="@+id/d6"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <org.lucasr.twowayview.TwoWayView
                    android:layout_marginTop="10dp"
                    android:id="@+id/tw"
                    style="@style/TwoWayView"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_marginTop="12dp"
            android:textColor="@color/app_green"
            android:text="@string/te_pl"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ListView
            android:layout_marginTop="12dp"
            android:id="@+id/ls"
            android:divider="@color/background1"
            android:dividerHeight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>